# dq-rag-specs

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  REPORT.md  pyproject.toml
data/rag/index/: chunks.json  meta.json
docs/: specs_content.txt
eval/: questions.json
raw/: products.csv  vendors.jsonl
schemas/: raw_schemas.py  trusted_schemas.py
scripts/: create_pdf.py  eval.py  gen_inventory.py  simple_ingest.py
src/etl/: __init__.py  run.py  transform.py  utils.py  validators.py
src/rag/: __init__.py  api.py  ingest.py  retriever.py  simple_api.py  simple_retriever.py
tests/: test_etl.py  test_rag.py
