[project]
name = "dq-rag-specs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2", "pyarrow>=17.0", "pandera>=0.20",
  "pydantic>=2.8", "fastapi>=0.114", "uvicorn[standard]>=0.30",
  "pypdf>=4.3", "faiss-cpu>=1.8", "sentence-transformers>=3.0",
  "python-dotenv>=1.0"
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "black>=24.8", "mypy>=1.11", "pre-commit>=3.8"]

[tool.ruff]
line-length = 100